jlamontSC-test/src/objects/Strategic_Partnership_Project__c.object
<CustomObject>
    <description>An object to track strategic partnerships.</description>
    <fields>
        <fullName>Club_Entity_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only required for Chapters</inlineHelpText>
        <label>Club Entity/Team</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Strategic Partnership Projects</relationshipLabel>
        <relationshipName>Strategic_Partnership_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Reason_for_Engagement__c</fullName>
        <label>Key Reason for Engagement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_Grassroots_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local/Grassroots Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Club_Entity_Team__c</field>
                <operation>equals</operation>
                <valueField>Local_Grassroots_Campaign__c.Club_Entity_Team__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Local_Grassroots_Campaign__c</referenceTo>
        <relationshipLabel>Strategic Partnership Projects</relationshipLabel>
        <relationshipName>Strategic_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Tags__c</fullName>
        <label>Marketing Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Campaign_Strategy__c</fullName>
        <label>National Campaign Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Campaign__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Campaign_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Campaign__c</fullName>
        <label>National Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_National_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Sub_Campaign__c</fullName>
        <label>National Sub-Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Campaign_Strategy__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Local_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Focus__c</fullName>
        <formula>TEXT(Partner_Account__r.Organizational_Focus__c)</formula>
        <label>Partner Account Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Strategic_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Community_Role__c</fullName>
        <formula>TEXT(Partner_Contact__r.Community_Role__c)</formula>
        <label>Partner Contact Community Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Grasstop__c</fullName>
        <description>The Partner Contact&apos;s Grasstop Checkbox, brought to the Strategic Partnership.</description>
        <formula>Partner_Contact__r.Grasstop__c</formula>
        <label>Partner Contact Grasstop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Account__c</valueField>
            </filterItems>
            <infoMessage>This lookup window has an optional filter that will only show contacts that are in the Partner Account. This can be disabled if desired.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Strategic_Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Strength__c</fullName>
        <inlineHelpText>0 - (included or not in the organizer’s plan)
1 - In the same networks and have regular check-in conversations
2 - Take some actions for each others&apos; issues, take action jointly around common issues
3 - Actively work on campaign or set of common issues</inlineHelpText>
        <label>Partnership Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 -- Prospect</fullName>
                </value>
                <value>
                    <fullName>1 -- Regular Communication</fullName>
                </value>
                <value>
                    <fullName>2 -- Mutual Support</fullName>
                </value>
                <value>
                    <fullName>3 -- Joint Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Category__c</fullName>
        <label>Tactic Owner Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner_Catego</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner__c</fullName>
        <label>Tactic Owner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tactic_Owner_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grasstop</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnership</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Strategic Partnership Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_Contact__c</columns>
        <columns>Partnership_Strength__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategic Partnership Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Partnership Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SPP_Club_Entity_Must_Match_Tactic_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id &lt;&gt; &apos;00ei0000000xu3a&apos; 
&amp;&amp; $User.Alias &lt;&gt; &apos;ciron&apos; 
&amp;&amp; NOT(ISBLANK( Club_Entity_Team__c )) 
&amp;&amp; 
( 
(ISPICKVAL(Tactic_Owner__c, &apos;Inspiring Connections Outdoors&apos;)   &amp;&amp; NOT(ISPICKVAL( Club_Entity_Team__r.Entity_Category__c, &apos;Outings&apos;))) || 
(ISPICKVAL(Tactic_Owner__c, &apos;Activity Sections&apos;)    &amp;&amp; NOT(ISPICKVAL( Club_Entity_Team__r.Entity_Type__c, &apos;Activity Sections&apos;))) || 
(ISPICKVAL(Tactic_Owner__c, &apos;Chapter&apos;)              &amp;&amp; NOT(ISPICKVAL( Club_Entity_Team__r.Entity_Type__c, &apos;Chapter&apos;)) &amp;&amp; NOT(ISPICKVAL( Club_Entity_Team__r.Entity_Type__c, &apos;Special Entity&apos;))) || 
(ISPICKVAL(Tactic_Owner__c, &apos;Group&apos;)        &amp;&amp; NOT(ISPICKVAL( Club_Entity_Team__r.Entity_Type__c, &apos;Group&apos;))) || 
(ISPICKVAL(Tactic_Owner__c, &apos;Sierra Student Coalition&apos;)   &amp;&amp; NOT(ISPICKVAL( Club_Entity_Team__r.Entity_Type__c, &apos;SSC&apos;))) 
) 
&amp;&amp; Club_Entity_Team__r.RecordType.DeveloperName &lt;&gt; &apos;Team&apos;</errorConditionFormula>
        <errorDisplayField>Club_Entity_Team__c</errorDisplayField>
        <errorMessage>The Tactic Owner that is selected requires a Club Entity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPP_Tactic_Owner_Requires_Club_Entity</fullName>
        <active>true</active>
        <description>Certain tactic owners require Club Entity lookup to be populated
Excludes System Admin profile and Cast Iron user.</description>
        <errorConditionFormula>$Profile.Id &lt;&gt; &apos;00ei0000000xu3a&apos; &amp;&amp; 
$User.Alias &lt;&gt; &apos;ciron&apos; &amp;&amp; 
( 
ISPICKVAL(Tactic_Owner__c, &apos;Inspiring Connections Outdoors&apos;) || 
ISPICKVAL(Tactic_Owner__c, &apos;Activity Sections&apos;) || 
ISPICKVAL(Tactic_Owner__c, &apos;Chapter&apos;) || 
ISPICKVAL(Tactic_Owner__c, &apos;Group&apos;) || 
ISPICKVAL(Tactic_Owner__c, &apos;Sierra Student Coalition&apos;) 
) 
&amp;&amp; ISBLANK(Club_Entity_Team__c)</errorConditionFormula>
        <errorDisplayField>Club_Entity_Team__c</errorDisplayField>
        <errorMessage>The Tactic Owner that is selected requires a Club Entity.</errorMessage>
    </validationRules>
</CustomObject>